--- a/Reloj Minimalista/index.html
+++ b/Reloj Minimalista/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/stylees.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
     <title>Reloj Minimalista</title>
 </head>
 
@@ -14,13 +14,13 @@
         <div class="time" id="time">
             <span id="hora">12</span>
             <span>:</span>
-            <span id="minuto">45</span>     <!-- Realizado en 15 Minutos -->
+            <span id="minuto">45</span>
             <span>:</span>
             <span id="segundo">33</span>
         </div>
         <div class="date" id="date"></div>
     </div>
-    <script src="./js/date.js"></script>
+    <script src="./assets/js/date.js"></script>
 </body>
 
 </html>
