--- a/Administrador de Usuarios/index.html
+++ b/Administrador de Usuarios/index.html
@@ -69,8 +69,8 @@
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
 
-            <label for="surname">Apellido:</label>
-            <input type="text" id="surname" name="surname" required>
+            <label for="lastName">Apellido:</label>
+            <input type="text" id="lastName" name="lastName" required>
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
