--- a/Home Productos/home.html
+++ b/Home Productos/home.html
@@ -67,7 +67,77 @@
                         <hr>
                     </div>
                     <div class="products-container running-container">
+                        <div class="product running">
+                            <img src="./assets/img/product.png">
+                            <div class="text-producto-container">
+                                <div class="product-title-container">
+                                    <h4>Zapatillas</h4>
+                                    <hr>
+                                </div>
+                                <p>Unas zapatillas Azules</p>
+                                <div class="product-bottom-container">
+                                    <div class="product-price-container">
+                                        <p>$24.350</p>
+                                        <p>3 cuotas de $8.333</p>
+                                    </div>
+                                    <button>Ver más</button>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="product running">
+                            <img src="./assets/img/product.png">
+                            <div class="text-producto-container">
+                                <div class="product-title-container">
+                                    <h4>Zapatillas</h4>
+                                    <hr>
+                                </div>
+                                <p>Unas zapatillas Azules</p>
+                                <div class="product-bottom-container">
+                                    <div class="product-price-container">
+                                        <p>$24.350</p>
+                                        <p>3 cuotas de $8.333</p>
+                                    </div>
+                                    <button>Ver más</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="product running">
+                            <img src="./assets/img/product.png">
+                            <div class="text-producto-container">
+                                <div class="product-title-container">
+                                    <h4>Zapatillas</h4>
+                                    <hr>
+                                </div>
+                                <p>Unas zapatillas Azules</p>
+                                <div class="product-bottom-container">
+                                    <div class="product-price-container">
+                                        <p>$24.350</p>
+                                        <p>3 cuotas de $8.333</p>
+                                    </div>
+                                    <button>Ver más</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="product running">
+                            <img src="./assets/img/product.png">
+                            <div class="text-producto-container">
+                                <div class="product-title-container">
+                                    <h4>Zapatillas</h4>
+                                    <hr>
+                                </div>
+                                <p>Unas zapatillas Azules</p>
+                                <div class="product-bottom-container">
+                                    <div class="product-price-container">
+                                        <p>$24.350</p>
+                                        <p>3 cuotas de $8.333</p>
+                                    </div>
+                                    <button>Ver más</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 <section class="mountain">
@@ -76,7 +146,77 @@
                         <hr>
                     </div>
                     <div class="products-container mountain-container">
+                        <div class="product mountain">
+                            <img src="./assets/img/product.png">
+                            <div class="text-producto-container">
+                                <div class="product-title-container">
+                                    <h4>Zapatillas</h4>
+                                    <hr>
+                                </div>
+                                <p>Unas zapatillas Azules</p>
+                                <div class="product-bottom-container">
+                                    <div class="product-price-container">
+                                        <p>$24.350</p>
+                                        <p>3 cuotas de $8.333</p>
+                                    </div>
+                                    <button>Ver más</button>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="product mountain">
+                            <img src="./assets/img/product.png">
+                            <div class="text-producto-container">
+                                <div class="product-title-container">
+                                    <h4>Zapatillas</h4>
+                                    <hr>
+                                </div>
+                                <p>Unas zapatillas Azules</p>
+                                <div class="product-bottom-container">
+                                    <div class="product-price-container">
+                                        <p>$24.350</p>
+                                        <p>3 cuotas de $8.333</p>
+                                    </div>
+                                    <button>Ver más</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="product mountain">
+                            <img src="./assets/img/product.png">
+                            <div class="text-producto-container">
+                                <div class="product-title-container">
+                                    <h4>Zapatillas</h4>
+                                    <hr>
+                                </div>
+                                <p>Unas zapatillas Azules</p>
+                                <div class="product-bottom-container">
+                                    <div class="product-price-container">
+                                        <p>$24.350</p>
+                                        <p>3 cuotas de $8.333</p>
+                                    </div>
+                                    <button>Ver más</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="product mountain">
+                            <img src="./assets/img/product.png">
+                            <div class="text-producto-container">
+                                <div class="product-title-container">
+                                    <h4>Zapatillas</h4>
+                                    <hr>
+                                </div>
+                                <p>Unas zapatillas Azules</p>
+                                <div class="product-bottom-container">
+                                    <div class="product-price-container">
+                                        <p>$24.350</p>
+                                        <p>3 cuotas de $8.333</p>
+                                    </div>
+                                    <button>Ver más</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </section>
