--- a/Home Productos/home.html
+++ b/Home Productos/home.html
@@ -17,7 +17,7 @@
                 <img src="./assets/img/Logo.png" alt="">
                 <ul>
                     <li><a href="#">INICIO</a></li>
-                    <li><a href="#">PRODUCTOS</a></li>
+                    <li><a href="./admin/Administrador de Usuarios/usuarios_admin.html">PRODUCTOS</a></li>
                     <li><a href="#">CONTACTO</a></li>
                     <li><a href="#">NOSOTROS</a></li>
                 </ul>
