--- a/Home Productos/home.html
+++ b/Home Productos/home.html
@@ -45,7 +45,7 @@
                     <li><a href="#"><i class="fa-solid fa-cart-shopping"></i> Carrito</a></li>
                     <hr>
                     <li><a href="#">INICIO</a></li>
-                    <li><a href="#">PRODUCTOS</a></li>
+                    <li><a href="./admin/Administrador de Usuarios/usuarios_admin.html">PRODUCTOS</a></li>
                     <li><a href="#">CONTACTO</a></li>
                     <li><a href="#">NOSOTROS</a></li>
                 </ul>
