--- a/Home Productos/home.html
+++ b/Home Productos/home.html
@@ -17,17 +17,21 @@
                 <img src="./assets/img/Logo.png" alt="">
                 <ul>
                     <li><a href="#">INICIO</a></li>
-                    <li><a href="./admin/Administrador de Usuarios/usuarios_admin.html">PRODUCTOS</a></li>
+                    <li><a href="#">PRODUCTOS</a></li>
                     <li><a href="#">CONTACTO</a></li>
                     <li><a href="#">NOSOTROS</a></li>
                 </ul>
             </nav>
             <nav class="meta-header">
                 <ul>
-                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></a></i></li>
+                    <li><a href="./admin/Administrador de Usuarios/usuarios_admin.html"
+                            class="btn-header btnLogin">Usuarios</a></li>
+                    <li><a href="./admin/Administrador de Productos/productos_admin.html"
+                            class="btn-header btnRegister">Productos</a></li>
+                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
                     <div class="user-container">
                         <li>
-                            <p>Jhon Doe</p>
+                            <p>Administrador</p>
                         </li>
                         <li><i class="fa-solid fa-user"></i></li>
                     </div>
@@ -45,9 +49,16 @@
                     <li><a href="#"><i class="fa-solid fa-cart-shopping"></i> Carrito</a></li>
                     <hr>
                     <li><a href="#">INICIO</a></li>
-                    <li><a href="./admin/Administrador de Usuarios/usuarios_admin.html">PRODUCTOS</a></li>
+                    <li><a href="#">PRODUCTOS</a></li>
                     <li><a href="#">CONTACTO</a></li>
                     <li><a href="#">NOSOTROS</a></li>
+                    <hr>
+                    <div class="btn-header-container">
+                        <a href="./admin/Administrador de Usuarios/usuarios_admin.html"
+                            class="btn-header btnLogin">Usuarios</a>
+                        <a href="./admin/Administrador de Productos/productos_admin.html"
+                            class="btn-header btnRegister">Productos</a>
+                    </div>
                 </ul>
             </div>
         </header>
