--- a/Home Productos/home.html
+++ b/Home Productos/home.html
@@ -45,7 +45,7 @@
 
             <div class="mobile-menu">
                 <ul>
-                    <li><a href="#"><i class="fa-solid fa-user"></i> Jhon Doe</a></li>
+                    <li><a href="#"><i class="fa-solid fa-user"></i> Administrador</a></li>
                     <li><a href="#"><i class="fa-solid fa-cart-shopping"></i> Carrito</a></li>
                     <hr>
                     <li><a href="#">INICIO</a></li>
