--- a/Home Productos/admin/Administrador de Productos/productos_admin.html
+++ b/Home Productos/admin/Administrador de Productos/productos_admin.html
@@ -23,20 +23,22 @@
             <ul>
                 <ul>
                     <a id="usersLink" href="../Administrador de Usuarios/usuarios_admin.html">
-                    <li>
-                        <i class="fa-solid fa-address-book"></i>
-                        Usuarios
-                    </li>
+                        <li>
+                            <i class="fa-solid fa-address-book"></i>
+                            Usuarios
+                        </li>
                     </a>
                     <li class="active">
                         <i class="fa-brands fa-product-hunt"></i>
                         Productos
                     </li>
 
-                    <li>
-                        <i class="fa-solid fa-gear"></i>
-                        Configuración
-                    </li>
+                    <a id="homeLink" href="../../home.html">
+                        <li>
+                            <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                            Volver al inicio
+                        </li>
+                    </a>
                 </ul>
 
                 <div class="contenedor_btn_actualizarCuenta">
@@ -58,10 +60,12 @@
                     <i class="fa-brands fa-product-hunt"></i>
                     Productos
                 </li>
-                <li>
-                    <i class="fa-solid fa-gear"></i>
-                    Configuración
-                </li>
+                <a id="homeLink" href="../../home.html">
+                    <li>
+                        <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                        Volver al inicio
+                    </li>
+                </a>
             </ul>
 
             <div class="contenedor_btn_actualizarCuenta">
