--- a/Home Productos/admin/Administrador de Usuarios/usuarios_admin.html
+++ b/Home Productos/admin/Administrador de Usuarios/usuarios_admin.html
@@ -32,10 +32,12 @@
                             Productos
                         </li>
                     </a>
-                    <li>
-                        <i class="fa-solid fa-gear"></i>
-                        Configuración
-                    </li>
+                    <a id="homeLink" href="../../home.html">
+                        <li>
+                            <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                            Volver al inicio
+                        </li>
+                    </a>
                 </ul>
 
                 <div class="contenedor_btn_actualizarCuenta">
@@ -57,10 +59,14 @@
                         Productos
                     </li>
                 </a>
-                <li>
-                    <i class="fa-solid fa-gear"></i>
-                    Configuración
-                </li>
+
+                <a id="homeLink" href="../../home.html">
+                    <li>
+                        <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                        Volver al inicio
+                    </li>
+                </a>
+
             </ul>
 
             <div class="contenedor_btn_actualizarCuenta">
